--- a/lsp_assignment_1/.project
+++ b/lsp_assignment_1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>lsp_assignment_1</name>
+	<name>lsp_assignment</name>
 	<comment></comment>
 	<projects>
 	</projects>
